# db-explorer

./: .eslintrc.js  .gitattributes  .gitignore  .gitmodules  README.md  Storybook.ts  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  storybook.requires.js  testPG.js  tsconfig.json
.storybook/: main.js  preview.js
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/debug/java/com/db_explorer/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/db_explorer/: MainActivity.java  MainApplication.java  MainApplication.kt  ReactPackageProvider.kt
android/app/src/main/java/com/db_explorer/drivers/: NVPostgresDriver.java
android/app/src/main/java/com/db_explorer/modules/: DriverManager.kt  DriverManagerTypes.kt  Logger.kt  PlatformDriverManager.kt
android/app/src/main/java/com/db_explorer/modules/tunnel/: SSHTunnel.kt  Types.kt
android/app/src/main/kotlin/com/db_explorer/: MainActivity.kt  MainApplication.kt  ReactPackageProvider.kt
android/app/src/main/kotlin/com/db_explorer/drivers/: NativeDatabaseDriver.kt  PostgresDriver.kt
android/app/src/main/kotlin/com/db_explorer/drivers/models/: DatabaseColumnInfo.kt  DatabaseQueryResult.kt
android/app/src/main/kotlin/com/db_explorer/modules/drivers/: INativeDatabaseDriver.kt  NativeDatabaseDriver.kt  PostgresDriver.kt
android/app/src/main/kotlin/com/db_explorer/modules/drivers/models/: DatabaseColumnInfo.kt  DatabaseQueryResult.kt
android/app/src/main/native/com/db_explorer/: DriverManager.java
android/app/src/main/res/values/: strings.xml
assets/editor/: Global.d.ts  editorFrame.html  index.html  interactions.js  interop.js
assets/editor.bundle/: .eslintignore  Global.d.ts  index.html  interactions.js  interface.js  interop.js  package.json  shadow-polyfill.js  whatwg-fetch.js
cpp/: PostgresDriver.cpp  PostgresDriver.h  driver_manager_shared.vcxitems  example.cpp
ios/: AppDelegate.swift  Podfile
ios/db_explorer/: AppDelegate.m  Info.plist  LaunchScreen.storyboard  Utils.swift  db_explorer-Bridging-Header.h
ios/db_explorer.xcodeproj/: project.pbxproj
ios/db_explorer.xcworkspace/: contents.xcworkspacedata
ios/db_explorerTests/: db_explorerTests.m
scripts/: buildMonaco.js  buildMonaco.mjs  buildSharedAndroid.js  buildSharedAndroid.mjs  buildSharedIOS.js  buildSharedIOS.mjs  buildSharedWindows.js  buildSharedWindows.mjs  configureNativeToolchains.js  configureNativeToolchains.mjs  installNativeDeps.mjs
scripts/utils/: index.js  index.mjs  ndk.js  ndk.mjs  openssl.js
shared/: .gitignore  Cargo.toml
shared/.cargo/: config.toml
shared/src/: db_explorer_shared.h  errors.rs  handle_db.rs  handle_tunnel.rs  lib.rs  logger.rs  manager.rs  messages.rs  shared.h  utils.rs
shared/src/compat/: android.rs
shared/src/database/: mod.rs  postgres.rs  types.rs
shared/src/drivers/: mod.rs  postgres.rs  types.rs
shared/src/drivers/utils/: mod.rs  pg_unwrap.rs  ustr.rs
shared/src/io/: database.rs  mod.rs  tunnel.rs
shared/src/manager/: mod.rs
shared/src/tunnel/: libssh2.rs  libssh2_utils.rs  mod.rs  types.rs
src/: App.tsx
src/connection/: index.ts
src/database/: DatabaseDriver.ts
src/drivers/: DatabaseDriver.ts  IDriver.ts  INativeDriver.ts  NativeDatabaseDriver.ts  NativeMessageDatabaseDriver.ts
src/tunnel/: index.ts  types.ts
src/utils/: addressInfo.ts  contextMenu.ts  fileManager.ts  index.ts  io.ts  secureStorage.ts
windows/: ExperimentalFeatures.props  db_explorer.sln
windows/SSH.Core/: ILogger.cs  SSH.Core.csproj  SSHTunnel.cs  Types.cs
windows/SSH.Test/: Logger.cs  Program.cs  SSH.Test.csproj
windows/db_explorer/: App.cpp  App.h  App.idl  App.xaml  App.xaml.cs  AutolinkedNativeModules.g.cs  AutolinkedNativeModules.g.targets  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.cs  ReactPackageProvider.h  db_explorer.csproj  db_explorer.vcxproj  db_explorer_TemporaryKey.pfx  packages.config
windows/driver_manager/: PostgresDriverModule.cpp  PostgresDriverModule.h  ReactPackageProvider.cpp  (+7 more)
(+76 files in other folders)
