[package]
name = "db_explorer_shared"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-lipo = "3.1.1"

[dependencies]
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
async-executor = "1.4.1"
async-global-executor = "2.0.2"
async-io = "1.6.0"
async-trait = "0.1.51"
async-channel = "1.6.1"
easy-parallel = "3.2.0"
futures-util = "0.3"
futures-lite = "1.12.0"
strum = "0.23.0"
strum_macros = "0.23.1"
futures = "0.3"
sqlx = { git = "https://github.com/williamabradley/sqlx", branch = "exposed-driver", default_features = false, features = [ "postgres", "offline" ], optional = true }
bstr = "0.2"
sentry = { version = "0.23.0", default_features = false, features = [ "backtrace", "contexts", "panic", "reqwest", "native-tls" ] }
sentry-core = "0.23.0"
sentry-backtrace = "0.23.0"
sentry-panic = "0.23.0"
base64 = "0.13.0"
async-ssh2-lite = { git = "https://github.com/williamabradley/async-ssh2-lite", branch = "windows-openssl-support", features = [ "openssl-on-win32" ] }
ssh2 = { git = "https://github.com/williamabradley/ssh2-rs", branch = "windows-openssl-features", features = [ "openssl-on-win32" ] }
tokio = { version = "1.16.1", features = ["full"] }

[features]
default = ["sqlx/runtime-async-std-native-tls"]
windows = ["sqlx/runtime-async-std-native-tls"]
ios = ["sqlx/runtime-async-std-native-tls"]
android = ["sqlx/runtime-async-std-native-tls"]